--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
     <style>
         body { font-family: 'Kanit', sans-serif; }
         .form-label { @apply block text-sm font-medium text-gray-700 mb-1; }
-        .form-input { @apply block w-full px-3 py-2 bg-white border border-gray-400 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm; }
-        .form-input.invalid { @apply border-red-500 ring-1 ring-red-500; }
+        .form-input { 
+            @apply block w-full px-3 py-2 bg-white rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm; 
+            /* Explicitly define a standard, visible gray border */
+            border: 1px solid #B0B0B0; 
+        }
+        .form-input.invalid { 
+             /* Override border color for invalid fields */
+            border-color: #F87171; /* Tailwind's red-400 */
+            @apply ring-1 ring-red-500; 
+        }
         .validation-message { @apply text-red-600 text-sm mt-1; }
         .form-section-title { @apply text-xl font-semibold text-gray-800 border-b pb-2 mb-6; }
         .cta-button { @apply w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm text-lg font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 transition-colors disabled:bg-gray-400; }
