--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
                                 <div><label for="business-type" class="form-label">ประเภทธุรกิจ <span class="text-red-500">*</span></label><select id="business-type" class="form-input" required><option>บุคคลธรรมดา</option><option>ห้างหุ้นส่วนจำกัด</option><option>บริษัทจำกัด</option><option>วิสาหกิจชุมชน</option><option>อื่นๆ</option></select></div>
                                 <div><label for="owner-name" class="form-label">ชื่อ-นามสกุล เจ้าของ/กรรมการ <span class="text-red-500">*</span></label><input type="text" id="owner-name" class="form-input" required></div>
                                 <div><label for="owner-id" class="form-label">เลขบัตรประชาชน <span class="text-red-500">*</span></label><input type="text" id="owner-id" class="form-input" required></div>
+                                <div><label for="owner-phone" class="form-label">เบอร์โทรศัพท์มือถือ <span class="text-red-500">*</span></label><input type="tel" id="owner-phone" class="form-input" required></div>
+                                <div><label for="owner-email" class="form-label">อีเมล <span class="text-red-500">*</span></label><input type="email" id="owner-email" class="form-input" required></div>
                                 <div><label for="bank-name" class="form-label">ชื่อธนาคาร <span class="text-red-500">*</span></label><input type="text" id="bank-name" class="form-input" required></div>
                                 <div><label for="account-name" class="form-label">ชื่อบัญชี <span class="text-red-500">*</span></label><input type="text" id="account-name" class="form-input" required></div>
                                 <div><label for="account-number" class="form-label">เลขที่บัญชี <span class="text-red-500">*</span></label><input type="text" id="account-number" class="form-input" required></div>
@@ -248,6 +250,8 @@
                         businessType: document.getElementById('business-type').value,
                         ownerName: document.getElementById('owner-name').value,
                         ownerId: document.getElementById('owner-id').value,
+                        ownerPhone: document.getElementById('owner-phone').value,
+                        ownerEmail: document.getElementById('owner-email').value,
                         bankName: document.getElementById('bank-name').value,
                         accountName: document.getElementById('account-name').value,
                         accountNumber: document.getElementById('account-number').value,
@@ -289,3 +293,31 @@
     </script>
 </body>
 </html>
+```
+
+---
+### **คำแนะนำสำหรับ Google Sheet และ Script**
+
+
+## รายชื่อคอลัมน์สำหรับ Google Sheet (ฉบับปรับปรุง)
+
+เพื่อให้ฟอร์มใหม่ทำงานได้อย่างสมบูรณ์ กรุณา **เพิ่ม 2 คอลัมน์ใหม่** คือ `OwnerPhone` และ `OwnerEmail` ใน Google Sheet ของท่าน โดยเรียงลำดับคอลัมน์ทั้งหมดดังนี้:
+
+1.  `Timestamp`
+2.  `TradeName`
+3.  `RegisteredName`
+4.  `BusinessType`
+5.  `OwnerName`
+6.  `OwnerID`
+7.  **`OwnerPhone`** (คอลัมน์ใหม่)
+8.  **`OwnerEmail`** (คอลัมน์ใหม่)
+9.  `BankName`
+10. `AccountName`
+11. `AccountNumber`
+12. `PrivilegeType`
+13. `PrivilegeDetails`
+14. `BusinessDescription`
+15. `FacebookURL`
+16. `ConfirmMembership`
+17. `ConfirmConsent`
+18. `ConfirmTru
